# ProgramacaoAvancada

./: Makefile  README.md  main.cpp
Trabalho1/: Trabalho1Tec2.ipynb  main.cpp
Trabalho2/: Delaunay_+_Voronoi.ipynb  custo_computacional.csv  main.cpp
Trabalho3/: convexHull.h  envoltória.ipynb  main.cpp
Trabalho4/: Minkowski.ipynb  convexHull.cpp  main.cpp  minkowski.cpp  minkowski.h  minkowski_distance_table.csv
Trabalho5/: TrabalhoGrid(1).ipynb  app  main.cpp  manual_performance_data.csv  performance_data.csv
Trabalho6/: Agent.cpp  Agent.h  AgentManager.cpp  AgentManager.h  CMakeLists.txt  Grid.cpp  Grid.h  Metrics.cpp  Metrics.h  main.cpp
Trabalho6/factories/: AStarPathfinderFactory.h  BasicAgentFactory.h  IAgentFactory.h  IObstacleFactory.h  RandomObstacleFactory.h
Trabalho7/: Agent.cpp  Agent.h  AgentDecorator.h  AgentManager.cpp  AgentManager.h  BasicAgentBehavior.h  CMakeLists.txt  Grid.h  HexagonalGridAdapter.cpp  HexagonalGridAdapter.h  IAgentBehavior.h  Pathfinder.h  RectangularGridAdapter.h  SmartPathfindingDecorator.h  SpeedBoostDecorator.h  main.cpp
Trabalho7/factories/: BasicGridFactory.h  IGridFactory.h  IPathfinderFactory.h
Trabalho8/agents/: Agent.cpp  Agent.h  AgentManager.cpp  AgentManager.h
Trabalho8/agents/behaviors/: BasicAgentBehavior.h  IAgentBehavior.h
Trabalho8/core/: AStarPathfinder.cpp  Node.h  main.cpp
Trabalho8/factories/: AStarPathfinderFactory.h  IAgentFactory.h  IObstacleFactory.h  IPathfinderFactory.h  NavigationFactory.h
Trabalho8/patterns/: AgentRespawnObserver.cpp  AgentRespawnObserver.h  GridInitializationHandler.h  IObserver.h
Trabalho9/: CMakeLists.txt
Trabalho9/agents/: Agent.cpp  Agent.h  AgentManager.cpp  AgentManager.h
Trabalho9/agents/behaviors/: AgentDecorator.h  BasicAgentBehavior.h  SmartPathfindingDecorator.h  SpeedBoostDecorator.h
Trabalho9/core/: AStarPathfinder.h  Grid.cpp  main.cpp
Trabalho9/factories/: IGridFactory.h
Trabalho9/grids/: IGridAdapter.h
Trabalho9/patterns/: AgentManagerInitializationHandler.h  AgentRespawnObserver.cpp  Command.h  CommandProcessor.h  ISubject.h  InitializationHandler.h  MoveAgentCommand.h
geometry/: geometry.cpp  geometry.h
graphics/: graphics.cpp  graphics.h
input/: input.cpp  input.h
polygons/: polygon.cpp  polygon.h
